[metadata]
name = pyinstaller
version = attr: PyInstaller.__version__
url = https://www.pyinstaller.org/
project_urls = 
	Source = https://github.com/pyinstaller/pyinstaller
description = PyInstaller bundles a Python application and all its dependencies into a single package.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Hartmut Goebel, Giovanni Bajo, David Vierra, David Cortesi, Martin Zibricky
keywords = 
	packaging, app, apps, bundle, convert, standalone, executable
	pyinstaller, cxfreeze, freeze, py2exe, py2app, bbfreeze
license = GPLv2-or-later with a special exception which allows to use PyInstaller to build and distribute non-free programs (including commercial ones)
license_files = COPYING.txt
classifiers = 
	Development Status :: 6 - Mature
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Other Audience
	Intended Audience :: System Administrators
	License :: OSI Approved :: GNU General Public License v2 (GPLv2)
	Natural Language :: English
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX
	Operating System :: POSIX :: AIX
	Operating System :: POSIX :: BSD
	Operating System :: POSIX :: Linux
	Operating System :: POSIX :: SunOS/Solaris
	Programming Language :: C
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3.13
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Software Development
	Topic :: Software Development :: Build Tools
	Topic :: Software Development :: Interpreters
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: System :: Installation/Setup
	Topic :: System :: Software Distribution
	Topic :: Utilities

[options]
packages = find:
zip_safe = False
include_package_data = False
python_requires = >=3.8, <3.14
install_requires = 
	setuptools >= 42.0.0
	altgraph
	pefile >= 2022.5.30 ; sys_platform == 'win32'
	pywin32-ctypes >= 0.2.1 ; sys_platform == 'win32'
	macholib >= 1.8 ; sys_platform == 'darwin'
	pyinstaller-hooks-contrib >= 2024.8
	importlib_metadata >= 4.6 ; python_version < "3.10"
	packaging >= 22.0

[options.packages.find]
include = 
	PyInstaller
	PyInstaller.*

[options.package_data]
PyInstaller = 
	bootloader/*/*
	fake-modules/*.py
	fake-modules/_pyi_rth_utils/*.py
	hooks/rthooks.dat
	lib/README.rst

[options.extras_require]
hook_testing = 
	pytest >= 2.7.3
	execnet >= 1.5.0
	psutil
completion = 
	argcomplete

[options.entry_points]
console_scripts = 
	pyinstaller = PyInstaller.__main__:_console_script_run
	pyi-archive_viewer = PyInstaller.utils.cliutils.archive_viewer:run
	pyi-bindepend = PyInstaller.utils.cliutils.bindepend:run
	pyi-grab_version = PyInstaller.utils.cliutils.grab_version:run
	pyi-makespec = PyInstaller.utils.cliutils.makespec:run
	pyi-set_version = PyInstaller.utils.cliutils.set_version:run

[sdist]
formats = gztar

[clean]
all = 1

[catchlog]
log_level = DEBUG

[tool:pytest]
timeout = 600
testpaths = 
	tests
python_files = "tests/functional/test_*.py" "tests/unit/test_*.py"
norecursedirs = 
	tests/functional/data
	tests/functional/logs
	tests/functional/modules
	tests/functional/scripts
	tests/functional/specs
	tests/scripts
	tests/unit/Tree_files
	tests/unit/hookutils_files
	tests/unit/test_modulegraph/testdata
	tests/unit/test_modulegraph/testpkg-*
filterwarnings = 
	ignore:Please use assertEqual instead.:DeprecationWarning
	ignore:Use zipio.listdir instead of os_listdir:DeprecationWarning:
	error::ResourceWarning:
	error::pytest.PytestUnraisableExceptionWarning:
addopts = "-v" "-rsfE" "--doctest-glob="
markers = 
	darwin: only run on macOS
	linux: only runs on GNU/Linux
	win32: only runs on Windows

[egg_info]
tag_build = 
tag_date = 0

